<resources>
    <string name="app_name">MHKG+</string>
	<string name="version_no">1.1.0</string>
    <string name="settings">設定</string>
    <string name="title_activity_main">MHKG+</string>
    <string name="reload">重新整理</string>
    <string name="changec">轉台</string>
    <string name="exit">離開</string>
	<string name="exited">毒已脫</string>
    <string name="loading">載入中</string>
    <string name="init">正在進行初始化  &#8230;</string>
    <string name="connected">接已連</string>
    <string name="loaded">撈已單</string>
    <string name="offline">線已斷</string>
    <string name="exithkg">確定脫毒?</string>
    <string name="settings">設定</string>
    <string name="set_preferences">set_preferences</string>
    <string name="enable_zoom">允許縮放</string>
    <string name="yes">確定</string>
    <string name="no">否</string>
    <string name="webview_settings">網頁設定</string>
    <string name="advanced_settings">進階設定</string>
    <string name="test_settings">測試設定</string>
    <string name="account_settings">帳戶設定</string>
    <string name="about">關於</string>
  	<string name="preset">預設台</string> 
  	<string name="timeout">連接逾時</string> 
  	<string name="use_cache">調用緩存</string> 
  	<string name="load_image">載入表情符號</string> 
  	<string name="app_version">軟件版本</string>
  	<string name="cache_size">緩存大小</string>
  	<string name="clear_cache">清除緩存</string>
  	<string name="black_theme">夜間模式</string>
  	<string name="enable_push">允許推送通知</string>
  	<string name="enable_history">啟用回帶功能</string>
  	<string name="addfav">加到賣飛佛</string>
  	<string name="duplicate">此記錄已存在，不需重覆增加</string>
  	<string name="fav">賣飛佛</string>
  	<string name="his">回帶</string>
  	<string name="copied">製已複</string>
  	<string name="check_fav_id">查看賣飛佛記錄</string>
  	<string name="check_his_id">查看回帶記錄</string>
  	<string name="added">賣飛佛已加</string>
  	<string name="adding">正在增加  &#8230;</string>
  	<string name="input">輸入網址</string>
  	<string name="username">用戶名稱</string>
  	<string name="password">密碼</string>
  	<string name="press">按一下標題複製網址</string>
  	<string name="thread">請於post頁面才用此功能</string>
  	<string name="copy_url">複製連結</string>
  	<string name="view_url">前往網址</string>
  	<string name="reset">重設數據庫</string>
  	
  	<string name="c1">吹水台</string> 
  	<string name="c2">娛樂台</string> 
  	<string name="c3">時事台</string> 
  	<string name="c4">財經台</string>
  	<string name="c5">遊戲台</string>
  	<string name="c6">硬件台</string>
  	<string name="c7">寬頻台</string>
  	<string name="c8">軟件台</string>
  	<string name="c9">手機台</string>
  	<string name="c10">體育台</string>
  	<string name="c11">感情台</string>
  	<string name="c12">講故台</string>
  	<string name="c13">飲食台</string> 
  	<string name="c14">旅遊台</string> 
  	<string name="c15">潮流台</string> 
  	<string name="c16">動漫台</string>
  	<string name="c17">玩具台</string>
  	<string name="c18">音樂台</string>
  	<string name="c19">影視台</string>
  	<string name="c20">攝影台</string>
  	<string name="c21">學術台</string>
  	<string name="c22">汽車台</string>
  	<string name="c23">電台</string>
  	<string name="c24">站務台</string>
  	<string name="c25">自組活動台</string>
  	<string name="c26">創意台</string>
  	
</resources>