<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
       <PreferenceCategory
       		android:title="@string/webview_settings">
       		<CheckBoxPreference
            	android:key="enable_zoom"
            	android:title="@string/enable_zoom"
            	android:defaultValue="true"
        	/>
       		<CheckBoxPreference
            	android:key="load_image"
            	android:title="@string/load_image"
            	android:defaultValue="true"
       		/>
       		<CheckBoxPreference
            	android:key="enable_history"
            	android:title="@string/enable_history"
            	android:defaultValue="true"
       		/>
       		<ListPreference 
        		android:key="preset"
        		android:title="@string/preset"
        		android:entries="@array/preset"
        		android:entryValues="@array/preset_values"
        		android:defaultValue="c1"
			 />
       </PreferenceCategory>
       <PreferenceCategory
       		android:title="@string/advanced_settings"> 
       		<CheckBoxPreference
            	android:key="use_cache"
            	android:title="@string/use_cache"
            	android:defaultValue="true"
       		/>
			<ListPreference
   				android:key="cache_size"
    			android:title="@string/cache_size" 
    			android:entries="@array/cache_size"
   			    android:entryValues="@array/cache_size_values"
   			    android:defaultValue="10" 
   			    android:dependency="use_cache"
			/>
			<ListPreference 
        		android:key="timeout"
        		android:title="@string/timeout"
        		android:entries="@array/timeout"
        		android:entryValues="@array/timeout_values"
        		android:defaultValue="10"
			 />
       </PreferenceCategory>
       <PreferenceCategory
       		android:title="@string/test_settings"> 
       		<CheckBoxPreference
            	android:key="black_theme"
            	android:title="@string/black_theme"
            	android:defaultValue="false"
       		/>
       		<CheckBoxPreference
            	android:key="enable_push"
            	android:title="@string/enable_push"
            	android:defaultValue="true"
       		/>
       </PreferenceCategory>
       <PreferenceCategory
       		android:title="@string/about">
            <PreferenceScreen
                android:title="@string/app_version"
                android:summary="@string/version_no">
       		</PreferenceScreen>
       </PreferenceCategory> 
</PreferenceScreen>